==============
lxml changelog
==============

2.0.1 (Under development)
=========================

Features added
--------------

* Docstrings now reflect the signature of functions and methods to
  make them visible in API docs and ``help()``

Bugs fixed
----------

* Setting an element slice in objectify could insert slice-overlapping
  elements at the wrong position.

Other changes
-------------

* Passing ``--with-xslt-config=/path/to/xslt-config`` to setup.py will
  override the ``xslt-config`` script that is used to determine the C
  compiler options.


2.0 (2008-02-01)
================

Features added
--------------

* Passing the ``unicode`` type as ``encoding`` to ``tostring()`` will
  serialise to unicode.  The ``tounicode()`` function is now
  deprecated.

* ``XMLSchema()`` and ``RelaxNG()`` can parse from StringIO.

* ``makeparser()`` function in ``lxml.objectify`` to create a new
  parser with the usual objectify setup.

Bugs fixed
----------

* Form elements would return None for ``form.fields.keys()`` if there
  was an unnamed input field.  Now unnamed input fields are completely
  ignored.

Other changes
-------------


2.0beta2 (2008-01-26)
=====================

Features added
--------------

* Plain ASCII XPath string results are no longer forced into unicode
  objects as in 2.0beta1, but are returned as plain strings as before.

* All XPath string results are 'smart' objects that have a
  ``getparent()`` method to retrieve their parent Element.

* ``with_tail`` option in serialiser functions.

* More accurate exception messages in validator creation.

Bugs fixed
----------

* Missing import in ``lxml.html.clean``.

* Some Python 2.4-isms prevented lxml from building/running under
  Python 2.3.

Other changes
-------------

* Exceptions carry only the part of the error log that is related to
  the operation that caused the error.

* ``XMLSchema()`` and ``RelaxNG()`` now enforce passing the source